fix(ADA-1817): Answer Selection Indication in High Contrast Modes
* add demo page

* change border width

* remove open question change

* revert unneeded changes

* add selection border variable + remove unused changes

* revert changed line

* test

--- a/src/components/quiz-question/multi-choice/multi-choice.scss
+++ b/src/components/quiz-question/multi-choice/multi-choice.scss
@@ -64,7 +64,7 @@
           flex-basis: 32px;
           padding: 5px 8px;
           border-right-style: solid;
-          border-right-width: 1px;
+          border-right-width: $selection-border-width;
           border-right-color: $tone-1-color;
         }
         .questionContent {
